# yt-dlp-wizwam

./: .gitignore  BUGFIX_PROGRESS_BAR.md  CHANGELOG.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DOCUMENTATION_REVIEW_SUMMARY.md  FEATURE_DOWNLOAD_DIR.md  INSTALL.md  LICENSE  MANIFEST.in  README.md  SECURITY.md  STATUS.md  TESTING.md  TODO.md  config.yaml  install-linux.sh  install.sh  pyproject.toml  requirements.txt  setup.py  test-install.sh  test_config.py  test_port_detection.py  test_search_sort.md  testauth.md  uninstall.sh
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: python-package.yml
config/: README.md
dist-packages/: README.md  SHA256SUMS.txt  install-arch-0.0.2-alpha.sh  install-arch-latest.sh  install-macos-0.0.2-alpha.sh  install-macos-latest.sh  install-ubuntu-0.0.2-alpha.sh  install-ubuntu-latest.sh  install-windows-0.0.2-alpha.ps1  install-windows-latest.ps1
github/: sync-to-github.sh
macros/: README.md  default.sh  synology.sh
scripts/: create-distribution-package.sh  github-upload.sh  github_upload.sh  push-with-ssh-check.sh  sync-to-github.sh
src/: README.md
tests/: README.md  test_plugins.py  test_web.py
wizwam/: __init__.py  cli.py
wizwam/core/: __init__.py  downloader.py  manager.py  plugin.py
wizwam/plugins/: __init__.py  example_plugin.py  ytdlp_plugin.py
wizwam/web/: __init__.py  app.py
wizwam/web/templates/: index.html
yt_dlp_wizwam/: __init__.py  __main__.py  cli.py  config.py  downloader.py  user_config.py  web.py
yt_dlp_wizwam/static/css/: styles.css
yt_dlp_wizwam/static/js/: app.js
yt_dlp_wizwam/templates/: about.html  index.html  settings.html  viewer.html
